--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,9 @@ h2 {
     .no-js #loader-wrapper {
         display: none;
     }
+    .no-js h1 {
+        color: #FFFFFF;
+    }
 
 
 /*=====Hero Top=====*/
