--- a/css/main.css
+++ b/css/main.css
@@ -38,8 +38,16 @@ h2 {
 	margin: 0;
 }
 h3 {
+	font-size: 3.75em;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 150;
+	line-height: 80px;
+	margin: 0;
+}
+h4 {
 	
-	font-size: 2.5em;
+	font-size: 2em;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 100;
