--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 	font-weight:300;
 	height:100%;
 	width: 80%;
-	margin:0 auto;
+	margin:0;
 	padding:0;
 	color:#002349;
 }
@@ -416,7 +416,7 @@ to {
 	margin: 10px 100px 30px;
 }
 .tm-media-title {
-	margin-bottom: 0.6em;
+	padding-bottom: 10px;
 	line-height: 1.5;
 }
 
@@ -426,16 +426,15 @@ to {
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-flex-direction: column;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-webkit-flex-direction: row;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	-webkit-align-items: center;
 	    -ms-flex-align: center;
 	        align-items: center;
 	-webkit-justify-content: center;
 	    -ms-flex-pack: center;
 	        justify-content: center;
-	margin-bottom: 30px;	
 }
 
 .tm-media-row:last-child { margin-bottom: 0; }
@@ -587,14 +586,13 @@ input::-moz-focus-inner {
 .row {
    width: 96%;
    max-width: 1020px;
-   margin: 0 auto;
 }
 /* fixed width for IE8 */
 .ie .row { width: 1000px ; }
 
 .narrow .row { max-width: 980px; }
 
-.row .row { width: auto; max-width: none; margin: 0 -20px; }
+.row .row { width: auto; max-width: none; margin: 0px; }
 
 /* row clearing */
 .row:before,
@@ -724,7 +722,7 @@ properly.
 	   margin-right: 0;
       padding:0px;
    }
-   .row .row { width: auto; max-width: none; margin: 0 -30px; background: #ebeeee;}
+   .row .row { width: auto; max-width: none; background: #ebeeee;}
 
    [class*="column"] + [class*="column"]:last-child { float: none; }
    [class*="bgrid"] [class*="column"] + [class*="column"]:last-child { float: none; }
@@ -819,7 +817,7 @@ properly.
 }
 
 /* Portfolio Content */
-#portfolio-wrapper .columns { margin-bottom: 36px; background: #ebeeee;}
+#portfolio-wrapper .columns { padding-bottom:36px; background-color: #ebeeee;}
 .portfolio-item .item-wrap {
    background: #ebeeee;
    overflow: hidden;
@@ -918,13 +916,13 @@ properly.
 .popup-modal .description-box { padding: 12px 36px 18px 36px; }
 .popup-modal .description-box h4 {
    font: 15px/24px 'opensans-bold', sans-serif;
-	margin-bottom: 12px;
+	margin-bottom: 0px;
    color: #111;
 }
 .popup-modal .description-box p {
 	font: 14px/24px 'opensans-regular', sans-serif;
    color: #A1A1A1;
-   margin-bottom: 12px;
+   margin-bottom: 0px;
 }
 .popup-modal .description-box .categories {
    font: 11px/21px 'opensans-light', sans-serif;
@@ -991,7 +989,7 @@ ol, ul {
 }
 
 .project-filter {
-  margin-bottom: 40px;
+  margin-bottom: 0px;
   background: #ebeeee;
 }
 
@@ -1002,7 +1000,7 @@ ol, ul {
 
 .project-filter ul li a {
   display: block;
-  line-height: 18px;
+  line-height: 24px;
   padding: 10px 20px;
   text-transform: uppercase;
   font-size: 1.25em;
