--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,15 @@ h4 {
 
     }
 /*=====Nav Top=====*/
+nav {
+   margin: 0;
+   padding: 0;
+   border: 0;
+   outline: 0;
+   font-size: 100%;
+   vertical-align: baseline;
+   background: transparent;
+}
 #nav-wrap ul, #nav-wrap li, #nav-wrap a {
 	margin: 0;
 	padding: 0;
