--- a/css/main.css
+++ b/css/main.css
@@ -211,6 +211,10 @@ nav {
    vertical-align: baseline;
    background: transparent;
 }
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section {
+   display: block;
+}
 #nav-wrap ul, #nav-wrap li, #nav-wrap a {
 	margin: 0;
 	padding: 0;
@@ -1088,4 +1092,38 @@ ol, ul {
 
 .mix {
     display: none;
+}
+
+
+/* post nav*/
+/* post-nav */
+.post .post-nav {
+   margin: 24px 0;
+   padding: 30px 0 0 0;
+   border-top: 1px solid #E0E0E0;
+   font: 16px/30px opensans-light, sans-serif;
+}
+.post .post-nav li {
+   display: inline-block;
+   margin: 0;
+   padding: 0;
+   width: 49%;
+   line-height: 30px;
+}
+.post .post-nav li a { color: #a3a3a3; }
+.post .post-nav li a:hover { color: #333; }
+.post .post-nav li strong {
+   font: 15px/30px opensans-bold, sans-serif;
+   text-transform: uppercase;
+   color: #11ABB0;
+   letter-spacing: 1px;
+   display: block;
+}
+.post .post-nav li.next {
+   float: right;
+   text-align: right;
+}
+.post .post-nav li.prev {
+   float: left;
+   text-align: left;
 }
