--- a/css/main.css
+++ b/css/main.css
@@ -1132,7 +1132,7 @@ header.static {
 	   width: 48px;
 		height: 48px;
 		text-align: left;
-		background-color: #11ABB0;
+		background-color: #002349;
 		position: relative;
       border: none;
       float: right;
