--- a/css/main.css
+++ b/css/main.css
@@ -1172,7 +1172,7 @@ header.static {
       text-align: left;
    }
    .mobile #nav-wrap ul#nav > li.active a {
-      color: #11ABB0 !important;
+      color: #FFFFFF !important;
       background: none;
    }
 
