--- a/css/main.css
+++ b/css/main.css
@@ -1132,6 +1132,140 @@ ol, ul {
 }
 #portfolio .portfolio-wrapper i { margin-right: 10px; }
 
+/* desktop
+--------------------------------------------------------------- */
+
+#portfolio .row {
+   max-width: 1008px;
+   margin: 0 auto;
+
+   -moz-box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
+}
+#portfolio .narrow .row { max-width: 976px; }
+/* fixed width for IE8 */
+#portfolio .ie .row { width: 1008px ; }
+
+#portfolio .row .row { width: auto; max-width: 100% }
+
+#portfolio .col {
+   position: relative;
+   padding: 0 18px;
+   float: left;
+}
+
+/* row clearing */
+#portfolio .row:before,
+#portfolio .row:after {
+    content: " ";
+    display: table;
+}
+#portfolio .row:after {
+    clear: both;
+}
+/* For IE 6/7 (trigger hasLayout) */
+#portfolio .row { *zoom: 1; }
+
+
+/* removed gutters */
+#portfolio .row.collapsed .col,
+#portfolio col.collapsed { padding: 0; }
+
+/* removed nested columns paddings */
+#portfolio .col .col:first-child { padding-left: 0; }
+#portfolio .col .col:last-child { padding-right: 0; }
+/* If you'll be using IE8, use class ".last" in nested comlumns.
+   ":last-child" is not supported in IE8 */
+#portfolio .ie .row .row .last { padding-right: 0; }
+
+/* column widths */
+#portfolio .row .one-twelfth,     .row .g-1     { width: 8.33333%; }
+#portfolio .row .one-sixth,       .row .g-2     { width: 16.66667%; }
+#portfolio .row .one-fourth,      .row .g-3     { width: 25%; }
+#portfolio .row .one-third,       .row .g-4     { width: 33.33333%; }
+#portfolio .row .five-twelfths,   .row .g-5     { width: 41.66667%; }
+#portfolio .row .half,            .row .g-6     { width: 50%; }
+#portfolio .row .seven-twelfths,  .row .g-7     { width: 58.33333%; }
+#portfolio .row .two-thirds,      .row .g-8     { width: 66.66667%; }
+#portfolio .row .three-fourths,   .row .g-9     { width: 75%; }
+#portfolio .row .five-sixths,     .row .g-10    { width: 83.33333%; }
+#portfolio .row .eleven-twelfths, .row .g-11    { width: 91.66667%; }
+#portfolio .row .full,            .row .g-12    { width: 100%; }
+
+/* Offsets */
+#portfolio .row .offset-1    { margin-left: 8.33333%; }
+#portfolio .row .offset-2    { margin-left: 16.66667%; }
+#portfolio .row .offset-3    { margin-left: 25%; }
+#portfolio .row .offset-4    { margin-left: 33.33333%; }
+#portfolio .row .offset-5    { margin-left: 41.66667%; }
+#portfolio .row .offset-6    { margin-left: 50%; }
+#portfolio .row .offset-7    { margin-left: 58.33333%; }
+#portfolio .row .offset-8    { margin-left: 66.66667%; }
+#portfolio .row .offset-9    { margin-left: 75%; }
+#portfolio .row .offset-10   { margin-left: 83.33333%; }
+#portfolio .row .offset-11   { margin-left: 91.66667%; }
+
+
+/* smaller screens
+--------------------------------------------------------------- */
+@media only screen and (max-width: 800px) {
+
+   /*.col { padding: 0 15px; } */
+
+}
+
+/* mobile wide
+--------------------------------------------------------------- */
+@media only screen and (max-width: 767px) {
+
+   #portfolio .row {
+	   width: 460px;
+	   margin: 0 auto;
+      padding: 0;
+	}
+   #portfolio .col {
+	   width: 100% !important;
+	   float: none;
+	   margin-left: 0;
+	   margin-right: 0;
+      padding: 0 20px;
+    }
+    /* for nested columns */
+   #portfolio .col .row { width: 100%; }
+   #portfolio .col .row .col { padding: 0; }
+
+   /* Offsets */
+   #portfolio .row .offset-1    { margin-left: 0%; }
+   #portfolio .row .offset-2    { margin-left: 0%; }
+   #portfolio .row .offset-3    { margin-left: 0%; }
+   #portfolio .row .offset-4    { margin-left: 0%; }
+   #portfolio .row .offset-5    { margin-left: 0%; }
+   #portfolio .row .offset-6    { margin-left: 0%; }
+   #portfolio .row .offset-7    { margin-left: 0%; }
+   #portfolio .row .offset-8    { margin-left: 0%; }
+   #portfolio .row .offset-9    { margin-left: 0%; }
+   #portfolio .row .offset-10   { margin-left: 0%; }
+   #portfolio .row .offset-11   { margin-left: 0%; }
+}
+
+/* mobile narrow
+--------------------------------------------------------------- */
+@media only screen and (max-width: 460px) {
+
+   #portfolio .row { width: 100%; }
+
+}
+
+/* larger screens
+--------------------------------------------------------------- */
+@media screen and (min-width: 1200px) {
+
+   #portfolio .wide .row { max-width: 1180px; }
+   #portfolio .wide .col { padding: 0 20px; }
+
+}
+
 
 
 /* b. Header Styles
