--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -287,6 +287,7 @@ a:focus {
 .social-icons a {
 	display: inline-block;
 	margin: 0 .5em;
+	color: #ffffff;
 }
 
 /* cards wrapper and close btn */
